# rocket-opengl-with-rust

./: Cargo.toml  README.md  basicLight.frag  basicLight.json  basicLight.vert  checker.frag  checker.json  checker.vert  myshader.json  triangle.frag  triangle.vert  vertdata.json
front_end/: package.json
front_end/src/: App.tsx
gl_lib/gl/: Cargo.toml
gl_lib/gl/src/: lib.rs
src/: buffer.rs  camera.rs  json_parser.rs  main.rs  resources.rs  shader.rs  triangle.frag  triangle.vert  window_app.rs
src/apps/: mod.rs
src/apps/checker/: App.rs  gen_checker.rs  gen_cylinder.rs  mod.rs
src/apps/crash_test/: App.rs
src/file/: json_parser.rs  mod.rs  shader_description_parser.rs  util.rs  vbo_description_parser.rs
src/network/: http_receiver.rs  mod.rs
src/parameter/: mod.rs  parameter.rs
src/render/: gl_error.rs  mesh.rs  mod.rs  program.rs  raw_shader.rs  shader.rs  uniform.rs  vao.rs  vbo.rs
