[package]
name = "opengl_project"
version = "0.1.0"
authors = ["Nicolas Nuzillard <nicolas.nuzillard@hubstairs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.33.0", features = ["bundled", "static-link"] }
gl = { path = "gl_lib/gl" }
rocket = "0.4.4"
nalgebra-glm = "0.3"

[features]
gl_debug = ["gl/debug"]